--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "pokedex",
-  "version": "1.1.17",
+  "version": "3.0.0",
   "private": true,
+  "author": "Ali Gasymov <alik0211alik@gmail.com> (https://www.gasymov.com/)",
+  "homepage": "https://alik0211.github.io/pokedex/",
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "hardtack": "5.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-ga": "2.7.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.10",
-    "redux-logger": "^3.0.6"
+    "prettier": "2.2.1",
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
